--- a/index.html
+++ b/index.html
@@ -134,21 +134,40 @@
       </div>
       <h2 align="left">Purpose of the Workshop</h2>
         <p align="justify">Driven by the big data boom, <em>informetrics</em>, known as the study of quantitative aspects of information, has gained great benefits from <em>artificial intelligence</em> (Nilsson 1998) – including a wide range of intelligent agents through techniques such as neural networks, genetic programming, computer vision, heuristic search, knowledge representation and reasoning, Bayes network, planning and language understanding. With its capacities in analyzing unstructured scalable data and streams, understanding uncertain semantics, and developing robust and repeatable models, &ldquo;<em>Artificial Intelligence + Informetrics</em>&rdquo; has demonstrated enormous success in turning big data into big value and impact by handling diverse challenges raised from multiple disciplines and research areas. For example, bibliometric-enhanced information retrieval (Mayr et al., 2014), science mapping with topic models (Suominen and Toivanen, 2016), streaming data analytics for tracking technological change (Zhang et al., 2017), and entity extraction with unsupervised machine learning techniques (Zhang and Zhang, 2019). Such endeavours with broadened perspectives from machine intelligence would portend far-reaching implications for science (Fortunato et al., 2018), but how to effectively cohere the power of AI and informetrics to create cross-disciplinary solutions is still elusive from neither theoretical nor practical perspectives.<br> </p>
-        <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.        </p>
+        <p>This workshop is to gather researchers and practical users to open a collaborative platform for exchanging ideas, sharing pilot studies, and scoping future directions on this cutting-edge venue. We highlight &ldquo;<strong><em>AI + Informetrics</em></strong>&rdquo; as endeavors in constructing fundamental theories, developing novel methodologies, bridging conceptual knowledge with practical uses, and creating real-word solutions.        Specific examples of fields of interest include: </p>
+        <ul>
+          <li>Informetrics with machine learning (including deep learning)</li>
+          <li>Informetrics with natural language processing or computational linguistics</li>
+          <li>Informetrics with computer vision</li>
+          <li>Informetrics with other related AI techniques (e.g., information retrieval)</li>
+          <li>AI for science of science</li>
+          <li>AI for science, technology, &amp; innovation</li>
+          <li>AI for research policy and strategic management</li>
+          <li>Applications of AI-enhanced informetrics </li>
+        </ul>
+        <h2 align="left">Programme</h2>
+        <h5 align="left">1st Keynote: <strong>AI and Science of Science</strong></h5>
+        <p align="justify">&nbsp;</p>
+        <p align="justify"><strong>Abstract</strong>: Artificial Intelligence (AI) has fundamentally changed every aspect of our lives. In AI, the half life of a paper could be less than one year which means that new algorithms have been developed and become out of date within just one year, sometimes could be just few months. Computer vision leads the newly development of fansinating AI algorithms, which are then diffused to natural language processing and graph mining. AI has challenged our understandings of collaboration, knoweldge diffusion, and even citing behavior. The new concepts of human-machine teaming, cognitive computing in knowledge diffusion, citing future rather past are all happening right now at the AI era. This talk will highlight several research practices and share the thoughts about the current and future of AI and Science of Science.<br>
+          <br>
+        <span class="minig"><strong><img src="images/ying_ding_picture.png" alt="ying_ding_picture" width="165" height="192" class="u-pull-left"></strong></span>Dr. <strong>Ying Ding</strong> is Bill &amp; Lewis Suit Professor at School of Information, University of Texas at Austin. Before that, she was a professor and director of graduate studies for data science program at School of Informatics, Computing, and Engineering at Indiana University. She has led the effort to develop the online data science graduate program for Indiana University. She also worked as a senior researcher at Department of Computer Science, University of Innsburck (Austria) and Free University of Amsterdam (the Netherlands). She has been involved in various NIH, NSF and European-Union funded projects. She has published 240+ papers in journals, conferences, and workshops, and served as the program committee member for 200+ international conferences. She is the co-editor of book series called Semantic Web Synthesis by Morgan &amp; Claypool publisher, the co-editor-in-chief for Data Intelligence published by MIT Press and Chinese Academy of Sciences, and serves as the editorial board member for several top journals in Information Science and Semantic Web. She is the co-founder of Data2Discovery company advancing cutting edge AI technologies in drug discovery and healthcare. Her current research interests include data-driven science of science, AI in healthcare, Semantic Web, knowledge graph, data science, scholarly communication, and the application of Web technologies.</p>
+        <p align="justify">&nbsp;</p>
+        <h5 align="left">2nd Keynote: <strong>Global Models of Science and Their Applications</strong>        </h5>
+        <p align="justify"><strong>Abstract</strong>: </span><br>
+          <br>
+        <img src="images/kevin_boyack_picture.png" alt="kevin_boyack_picture" width="165" height="192" class="u-pull-left">Dr. <strong>Kevin Boyack.</strong></p>
+        <p align="justify">&nbsp;</p>
+        <h3 align="left">&nbsp;</h3>
+        <h3 align="left">Sessions</h3>
+        <p align="justify">The  workshop will be held on  March 17, 2021 (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
+        <ul>
+          <li>TBD.</li>
+        </ul>
+        <p align="justify">&nbsp;</p>
         <p>&nbsp;</p>
         <h2 align="left">Call for Papers</h2>
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See https://ischools.org/Program </p>
-    <p>Interests to this workshop include, but not limited to the following topics: </p>
-    <ul>
-      <li>Informetrics with machine learning (including deep learning)</li>
-      <li>Informetrics with natural language processing or computational linguistics</li>
-      <li>Informetrics with computer vision</li>
-      <li>Informetrics with other related AI techniques (e.g., information retrieval)</li>
-      <li>AI for science of science</li>
-      <li>AI for science, technology, &amp; innovation</li>
-      <li>AI for research policy and strategic management</li>
-      <li>Applications of AI-enhanced informetrics </li>
-    </ul>
+    <p>&nbsp;</p>
     <p align="justify">&nbsp;</p>
         <h2 align="left">Submission Guidelines</h2>
         <p>All papers should be submitted as PDF files to <a href="https://easychair.org/conferences/?conf=aii2021">EasyChair</a>. All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
