--- a/index.html
+++ b/index.html
@@ -157,9 +157,12 @@
           <br>
         <img src="images/kevin_boyack_picture.png" alt="kevin_boyack_picture" width="165" height="192" class="u-pull-left">Dr. <strong>Kevin Boyack.</strong></p>
         <p align="justify">&nbsp;</p>
-        <h3 align="left">&nbsp;</h3>
-        <h3 align="left">&nbsp;</h3>
-        <h3 align="left">Sessions</h3>
+        <p><br>
+          <br>
+        </p>
+        <p>&nbsp;</p>
+        <p>&nbsp; </p>
+        <h5 align="left">Sessions</h5>
         <p align="justify">The  workshop will be held on  March 17, 2021 (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
         <ul>
           <li>TBD.</li>
