--- a/index.html
+++ b/index.html
@@ -143,8 +143,9 @@
           <li>AI for science of science</li>
           <li>AI for science, technology, &amp; innovation</li>
           <li>AI for research policy and strategic management</li>
-          <li>Applications of AI-enhanced informetrics </li>
+          <li>Applications of AI-enhanced informetrics</li>
         </ul>
+        <p>&nbsp;</p>
         <h2 align="left">Programme</h2>
         <h5 align="left">1st Keynote: <strong>AI and Science of Science</strong>        </h5>
         <p align="justify"><strong>Abstract</strong>: Artificial Intelligence (AI) has fundamentally changed every aspect of our lives. In AI, the half life of a paper could be less than one year which means that new algorithms have been developed and become out of date within just one year, sometimes could be just few months. Computer vision leads the newly development of fansinating AI algorithms, which are then diffused to natural language processing and graph mining. AI has challenged our understandings of collaboration, knoweldge diffusion, and even citing behavior. The new concepts of human-machine teaming, cognitive computing in knowledge diffusion, citing future rather past are all happening right now at the AI era. This talk will highlight several research practices and share the thoughts about the current and future of AI and Science of Science.<br>
