--- a/index.html
+++ b/index.html
@@ -147,12 +147,12 @@
         </ul>
         <p>&nbsp;</p>
         <h2 align="left">Programme</h2>
-        <h5 align="left">1st Keynote: <strong>AI and Science of Science</strong>        </h5>
+        <h5 align="left"><strong>1st Keynote</strong>: <strong>AI and Science of Science</strong>        </h5>
         <p align="justify"><strong>Abstract</strong>: Artificial Intelligence (AI) has fundamentally changed every aspect of our lives. In AI, the half life of a paper could be less than one year which means that new algorithms have been developed and become out of date within just one year, sometimes could be just few months. Computer vision leads the newly development of fansinating AI algorithms, which are then diffused to natural language processing and graph mining. AI has challenged our understandings of collaboration, knoweldge diffusion, and even citing behavior. The new concepts of human-machine teaming, cognitive computing in knowledge diffusion, citing future rather past are all happening right now at the AI era. This talk will highlight several research practices and share the thoughts about the current and future of AI and Science of Science.<br>
           <br>
         <span class="minig"><strong><img src="images/ying_ding_picture.png" alt="ying_ding_picture" width="165" height="192" class="u-pull-left"></strong></span>Dr. <strong>Ying Ding</strong> is Bill &amp; Lewis Suit Professor at School of Information, University of Texas at Austin. Before that, she was a professor and director of graduate studies for data science program at School of Informatics, Computing, and Engineering at Indiana University. She has led the effort to develop the online data science graduate program for Indiana University. She also worked as a senior researcher at Department of Computer Science, University of Innsburck (Austria) and Free University of Amsterdam (the Netherlands). She has been involved in various NIH, NSF and European-Union funded projects. She has published 240+ papers in journals, conferences, and workshops, and served as the program committee member for 200+ international conferences. She is the co-editor of book series called Semantic Web Synthesis by Morgan &amp; Claypool publisher, the co-editor-in-chief for Data Intelligence published by MIT Press and Chinese Academy of Sciences, and serves as the editorial board member for several top journals in Information Science and Semantic Web. She is the co-founder of Data2Discovery company advancing cutting edge AI technologies in drug discovery and healthcare. Her current research interests include data-driven science of science, AI in healthcare, Semantic Web, knowledge graph, data science, scholarly communication, and the application of Web technologies.</p>
         <p align="justify">&nbsp;</p>
-        <h5 align="left">2nd Keynote: <strong>Global Models of Science and Their Applications</strong>        </h5>
+        <h5 align="left"><strong>2nd Keynote</strong>: <strong>Global Models of Science and Their Applications</strong>        </h5>
         <p align="justify"><strong>Abstract</strong>: </span><br>
           <br>
         <img src="images/kevin_boyack_picture.png" alt="kevin_boyack_picture" width="165" height="192" class="u-pull-left">Dr. <strong>Kevin Boyack.</strong></p>
@@ -162,7 +162,7 @@
         </p>
         <p>&nbsp;</p>
         <p>&nbsp; </p>
-        <h5 align="left">Sessions</h5>
+        <h5 align="left"><strong>Sessions</strong></h5>
         <p align="justify">The  workshop will be held on  March 17, 2021 (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
         <ul>
           <li>TBD.</li>
