--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
         <p align="justify">&nbsp;</p>
         <p>&nbsp;</p>
         <h2 align="left">Call for Papers</h2>
-    <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See CFP via: <a href="https://easychair.org/cfp/AII2021">https://easychair.org/cfp/AII2021 </a></p>
+    <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See CFP via: <a href="https://easychair.org/cfp/AII2021">https://easychair.org/cfp/AII2021 </a>.</p>
     <p align="justify">&nbsp;</p>
         <h2 align="left">Submission Guidelines</h2>
         <p>All papers should be submitted as PDF files to <a href="https://easychair.org/conferences/?conf=aii2021">EasyChair</a>. All papers must be original and not simultaneously submitted to another journal or conference. The following paper categories are welcome:<br>
