--- a/index.html
+++ b/index.html
@@ -162,8 +162,8 @@
         <p>&nbsp; </p>
         <h5 align="left"><strong>Sessions</strong></h5>
         <p align="justify">The  workshop will be held on  March 17, 2021 (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
-        <p align="justify"><img src="images/agenda_1.png" alt="" width="839" height="441"/><br>
-        <img src="images/agneda_2.png"  alt="" height="696"/></p>
+        <p align="justify"><img src="images/agenda_1.png" alt="" width="869" height="442"/><br>
+        <img src="images/agneda_2.png"  alt="" width="867" height="695"/></p>
         <p>&nbsp;</p>
         <h2 align="left">Call for Papers</h2>
     <p align="justify">You are invited to participate in the 1st Workshop on AI + Informetrics (AII2021) to be held as a virtual event as part of the <a href="https://www.ischools.org/iConference">iConference2021</a>, Virtual, on March 28-31, 2021. See CFP via: <a href="https://easychair.org/cfp/AII2021">https://easychair.org/cfp/AII2021</a>.</p>
