--- a/index.html
+++ b/index.html
@@ -840,7 +840,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:10</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
   style='mso-spacerun:yes'>&nbsp;</span>Attention: to Better Stand on the
-              Shoulders of Giants</td>
+              Shoulders of Giants [<a href="videos/attention.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Sha Yuan, <font
   class="font81">Zhou Shao</font><font class="font61">, Yu Zhang, Tong Xiao and
               Yifan Wang</font></td>
