--- a/index.html
+++ b/index.html
@@ -688,7 +688,7 @@
         <p><br>
         </p>
         <h5 align="left"><strong>Sessions</strong></h5>
-        <p align="justify">The  workshop will be held on  March 17, 2021 (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
+        <p align="justify">The  workshop will be held on  <strong>March 17, 2021</strong> (Beijing Time), and specific  activities     include keynotes, paper presentations  session.</p>
         <table border=0 cellpadding=0 cellspacing=0 width=791 style='border-collapse:
  collapse;table-layout:fixed;width:594pt'>
           <col class=xl841 width=85 style='mso-width-source:userset;mso-width-alt:2730;
