--- a/index.html
+++ b/index.html
@@ -712,7 +712,7 @@
           </tr>
           <tr height=19 style='height:14.0pt'>
             <td height=19 class=xl811 style='height:14.0pt;border-top:none'>9:00</td>
-            <td class=xl701 width=405 style='border-top:none;width:304pt'>OPENNING</td>
+            <td class=xl701 width=405 style='border-top:none;width:304pt'>OPENING</td>
             <td class=xl751 width=301 style='border-top:none;width:138pt'>　</td>
             <td class=xl721 style='border-top:none'>Yi Zhang</td>
           </tr>
