--- a/index.html
+++ b/index.html
@@ -973,6 +973,7 @@ We accept two types Regular Papers:</p>
 <ul>
  	<li>Alireza Abbasi, UNSW Canberra</li>
     <li>Andrea Scharnhorst, DANS-KNAW</li>
+	<li>Arash Hajikhani, VTT Technical Research Centre of Finland</li>
     <li>Bart Thijs, ECOOM, MSI, K.U.Leuven</li>
     <li>Chao Min, Nanjing University</li>
     <li>Chao Lu,  Hohai University</li>
