--- a/index.html
+++ b/index.html
@@ -806,7 +806,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:25</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'>Automatic
               Identification and Classification of Integrated Knowledge Content in an
-              Interdisciplinary Field: A Case Study on eHealth</td>
+              Interdisciplinary Field: A Case Study on eHealth [<a href="videos/All2021_WangShiyun.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Shiyun Wang</font><font class="font61">, Jin Mao and Hao Xie.</font></td>
           </tr>
