--- a/index.html
+++ b/index.html
@@ -857,7 +857,7 @@
           <tr height=72 style='mso-height-source:userset;height:54.75pt'>
             <td height=72 class=xl821 style='height:54.75pt;border-top:none'>15:40</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'>Study Concept
-              Drift in 150-year English Literature</td>
+              Drift in 150-year English Literature [<a href="videos/Study concept drift in 150-year english literature.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Ruiyuan Li</font><font class="font61">, Pin Tian and Shenghui
               Wang.<span style='mso-spacerun:yes'>&nbsp;</span></font></td>
