--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   –––––––––––––––––––––––––––––––––––––––––––––––––– -->
   <meta charset="utf-8">
   <title>1st Workshop on AI + Informetrics (AII2021)</title>
-  <meta name="description" content="st Workshop on AI + Informetrics (AII2021) @ iConference2021">
+  <meta name="description" content="1st Workshop on AI + Informetrics (AII2021) @ iConference2021">
   <meta name="author" content="">
 
   <!-- Mobile Specific Metas
