--- a/index.html
+++ b/index.html
@@ -748,8 +748,8 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>13:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>
-		    <a href="papers/paper.pdf">Research on Heterogeneous Enhanced Network Embedding for Cooperation Prediction</a></td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'>Research on
+              Heterogeneous Enhanced Network Embedding for Cooperation Prediction</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Xin Zhang</font><font class="font61">, Yi Wen and Haiyun Xu</font></td>
           </tr>
