--- a/index.html
+++ b/index.html
@@ -748,32 +748,32 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>13:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Research on
-              Heterogeneous Enhanced Network Embedding for Cooperation Prediction</td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper1'>Research on
+              Heterogeneous Enhanced Network Embedding for Cooperation Prediction</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Xin Zhang</font><font class="font61">, Yi Wen and Haiyun Xu</font></td>
           </tr>
           <tr height=93 style='height:70.0pt'>
             <td height=93 class=xl821 style='height:70.0pt;border-top:none'>13:15</td>
-            <td class=xl791 width=405 style='border-top:none;width:304pt'>Embedding-based
-              Neural Network Models for Book Recommendation in University Librarie</td>
+            <td class=xl791 width=405 style='border-top:none;width:304pt'><a href='papers/paper2'>Embedding-based
+              Neural Network Models for Book Recommendation in University Librarie</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jaeyoung Choi</font><font class="font61">, Chaeeun Han, Heeyoon
               Yang, Yeonkyoung Hong, Seoyoung Jeon and Yongjun Zhu</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:25</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Collaboration
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper3'>Collaboration
               and Knowledge Networks: a Framework on Analyzing Evolution of
-              University-industry Collaborative Innovation</td>
+              University-industry Collaborative Innovation</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Hongshu Chen</font><font class="font61"> and Xinna Song</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:35</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Recommendation
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper4'>Recommendation
               of Academic Collaborators: A Methodology Incorporating Word Embedding and
-              Network Embedding</td>
+              Network Embedding</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xiaowen Xi, Ying
               Guo and <font class="font81">Weiyu Duan</font></td>
           </tr>
@@ -789,31 +789,31 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>14:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Extraction of
-              Originative Sentence from Conclusion in Academic Papers</td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper5'>Extraction of
+              Originative Sentence from Conclusion in Academic Papers</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Bolin Hua</font><font class="font61"> and Youngkug Shin</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:15</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Building the
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper6'>Building the
               Extraction Model of the Software Entities from Full-Text of Research Articles
-              Based on BERT.</td>
+              Based on BERT.</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Chuan Jiang,
               Dongbo Wang, Si Shen, Wenhao Ye and <font class="font81">Jiangfeng Liu</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:25</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Automatic
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper7'>Automatic
               Identification and Classification of Integrated Knowledge Content in an
-              Interdisciplinary Field: A Case Study on eHealth [<a href="videos/All2021_WangShiyun.mp4">video</a>]</td>
+              Interdisciplinary Field: A Case Study on eHealth</a> [<a href="videos/All2021_WangShiyun.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Shiyun Wang</font><font class="font61">, Jin Mao and Hao Xie.</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:35</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Automatic
-              Related Work Section Generation by Sentence Extraction and Reordering [<a href="videos/deng-et-al-automatic-related-work-aii2021-presentation-prerecorded.mp4">video</a>]</td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper8'>Automatic
+              Related Work Section Generation by Sentence Extraction and Reordering</a> [<a href="videos/deng-et-al-automatic-related-work-aii2021-presentation-prerecorded.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Zekun Deng</font><font class="font61">, Zixin Zeng, Weiye Gu,
               Jiawen Ji and Bolin Hua</font></td>
@@ -830,17 +830,17 @@
           </tr>
           <tr height=57 style='mso-height-source:userset;height:43.5pt'>
             <td height=57 class=xl821 style='height:43.5pt;border-top:none'>15:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Text Mining on
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper9'>Text Mining on
               Job Advertisement Data: Systematic Process for Detecting Artificial
-              Intelligence Related Jobs</td>
+              Intelligence Related Jobs</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Asta Back, Arash
               Hajikhani and <font class="font81">Arho Suominen</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:10</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
-  style='mso-spacerun:yes'>&nbsp;</span>Attention: to Better Stand on the
-              Shoulders of Giants [<a href="videos/attention.mp4">video</a>]</td>
+  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper10'>Attention: to Better Stand on the
+              Shoulders of Giants</a> [<a href="videos/attention.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Sha Yuan, <font
   class="font81">Zhou Shao</font><font class="font61">, Yu Zhang, Tong Xiao and
               Yifan Wang</font></td>
@@ -848,16 +848,16 @@
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:25</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
-  style='mso-spacerun:yes'>&nbsp;</span>Measuring Interdisciplinary
-              Interactions Using Citation Analysis and Semantic Analysis</td>
+  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper11'>Measuring Interdisciplinary
+              Interactions Using Citation Analysis and Semantic Analysis</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Lu Huang,<font
   class="font81"> Xingxing Ni</font><font class="font61">, Xiang Chen and Yi
               Zhang</font></td>
           </tr>
           <tr height=72 style='mso-height-source:userset;height:54.75pt'>
             <td height=72 class=xl821 style='height:54.75pt;border-top:none'>15:40</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'>Study Concept
-              Drift in 150-year English Literature [<a href="videos/Study concept drift in 150-year english literature.mp4">video</a>]</td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper12'>Study Concept
+              Drift in 150-year English Literature</a> [<a href="videos/Study concept drift in 150-year english literature.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Ruiyuan Li</font><font class="font61">, Pin Tian and Shenghui
               Wang.<span style='mso-spacerun:yes'>&nbsp;</span></font></td>
@@ -873,40 +873,40 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>16:00</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'>Important
-              Citations Identification with Semi-supervised Classification Model.</td>
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper13'>Important
+              Citations Identification with Semi-supervised Classification Model.</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xin An, <font
   class="font81">Xin Sun</font><font class="font61"> and Shuo Xu</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:15</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'>Emerging
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper14'>Emerging
               Technology Opportunity Identification Based on Community Detection and Burst
-              Detection: A Case study of Intelligent Robots</td>
+              Detection: A Case study of Intelligent Robots</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jingwen Luo</font><font class="font61">, Fang Zou, Yujie Peng
               and Ying Huang</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:25</td>
-            <td class=xl731 width=405 style='border-top:none;width:304pt'>The
+            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper15'>The
               Interrelation of Sustainable Development Goals in Publications and Patents: A
-              Machine Learning Approach</td>
+              Machine Learning Approach</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Arash Hajikhani</font><font class="font61"> and Arho Suominen</font></td>
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>16:35</td>
-            <td class=xl731 width=405 style='border-top:none;width:304pt'>Research
-              Performance Prediction for Scientists Using LSTM Neural Networks</td>
+            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper16'>Research
+              Performance Prediction for Scientists Using LSTM Neural Networks</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Junwan Liu and <font
   class="font81">Rui Wang</font></td>
           </tr>
           <tr height=75 style='height:56.0pt'>
             <td height=75 class=xl821 style='height:56.0pt;border-top:none'>16:45</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'>ITGInsight -
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper17'>ITGInsight -
               Discovering and Visualizing Science, Technology and Innovation Information
-              for Generating Competitive Technological Intelligence</td>
+              for Generating Competitive Technological Intelligence</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xuefeng Wang, <font
   class="font81">Shuo Zhang</font><font class="font61"> and Yuqin Liu</font></td>
           </tr>
