--- a/index.html
+++ b/index.html
@@ -748,14 +748,14 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>13:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper1'>Research on
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper1.pdf'>Research on
               Heterogeneous Enhanced Network Embedding for Cooperation Prediction</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Xin Zhang</font><font class="font61">, Yi Wen and Haiyun Xu</font></td>
           </tr>
           <tr height=93 style='height:70.0pt'>
             <td height=93 class=xl821 style='height:70.0pt;border-top:none'>13:15</td>
-            <td class=xl791 width=405 style='border-top:none;width:304pt'><a href='papers/paper2'>Embedding-based
+            <td class=xl791 width=405 style='border-top:none;width:304pt'><a href='papers/paper2.pdf'>Embedding-based
               Neural Network Models for Book Recommendation in University Librarie</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jaeyoung Choi</font><font class="font61">, Chaeeun Han, Heeyoon
@@ -763,7 +763,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:25</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper3'>Collaboration
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper3.pdf'>Collaboration
               and Knowledge Networks: a Framework on Analyzing Evolution of
               University-industry Collaborative Innovation</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
@@ -771,7 +771,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:35</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper4'>Recommendation
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper4.pdf'>Recommendation
               of Academic Collaborators: A Methodology Incorporating Word Embedding and
               Network Embedding</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xiaowen Xi, Ying
@@ -789,14 +789,14 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>14:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper5'>Extraction of
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper5.pdf'>Extraction of
               Originative Sentence from Conclusion in Academic Papers</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Bolin Hua</font><font class="font61"> and Youngkug Shin</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:15</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper6'>Building the
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper6.pdf'>Building the
               Extraction Model of the Software Entities from Full-Text of Research Articles
               Based on BERT.</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Chuan Jiang,
@@ -804,7 +804,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:25</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper7'>Automatic
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper7.pdf'>Automatic
               Identification and Classification of Integrated Knowledge Content in an
               Interdisciplinary Field: A Case Study on eHealth</a> [<a href="videos/All2021_WangShiyun.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
@@ -812,7 +812,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:35</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper8'>Automatic
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper8.pdf'>Automatic
               Related Work Section Generation by Sentence Extraction and Reordering</a> [<a href="videos/deng-et-al-automatic-related-work-aii2021-presentation-prerecorded.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Zekun Deng</font><font class="font61">, Zixin Zeng, Weiye Gu,
@@ -830,7 +830,7 @@
           </tr>
           <tr height=57 style='mso-height-source:userset;height:43.5pt'>
             <td height=57 class=xl821 style='height:43.5pt;border-top:none'>15:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper9'>Text Mining on
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper9.pdf'>Text Mining on
               Job Advertisement Data: Systematic Process for Detecting Artificial
               Intelligence Related Jobs</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Asta Back, Arash
@@ -839,7 +839,7 @@
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:10</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
-  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper10'>Attention: to Better Stand on the
+  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper10.pdf'>Attention: to Better Stand on the
               Shoulders of Giants</a> [<a href="videos/attention.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Sha Yuan, <font
   class="font81">Zhou Shao</font><font class="font61">, Yu Zhang, Tong Xiao and
@@ -848,7 +848,7 @@
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:25</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
-  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper11'>Measuring Interdisciplinary
+  style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper11.pdf'>Measuring Interdisciplinary
               Interactions Using Citation Analysis and Semantic Analysis</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Lu Huang,<font
   class="font81"> Xingxing Ni</font><font class="font61">, Xiang Chen and Yi
@@ -856,7 +856,7 @@
           </tr>
           <tr height=72 style='mso-height-source:userset;height:54.75pt'>
             <td height=72 class=xl821 style='height:54.75pt;border-top:none'>15:40</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper12'>Study Concept
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper12.pdf'>Study Concept
               Drift in 150-year English Literature</a> [<a href="videos/Study concept drift in 150-year english literature.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Ruiyuan Li</font><font class="font61">, Pin Tian and Shenghui
@@ -873,14 +873,14 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>16:00</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper13'>Important
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper13.pdf'>Important
               Citations Identification with Semi-supervised Classification Model.</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xin An, <font
   class="font81">Xin Sun</font><font class="font61"> and Shuo Xu</font></td>
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:15</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper14'>Emerging
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper14.pdf'>Emerging
               Technology Opportunity Identification Based on Community Detection and Burst
               Detection: A Case study of Intelligent Robots</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
@@ -889,7 +889,7 @@
           </tr>
           <tr height=56 style='height:42.0pt'>
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:25</td>
-            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper15'>The
+            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper15.pdf'>The
               Interrelation of Sustainable Development Goals in Publications and Patents: A
               Machine Learning Approach</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
@@ -897,14 +897,14 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>16:35</td>
-            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper16'>Research
+            <td class=xl731 width=405 style='border-top:none;width:304pt'><a href='papers/paper16.pdf'>Research
               Performance Prediction for Scientists Using LSTM Neural Networks</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Junwan Liu and <font
   class="font81">Rui Wang</font></td>
           </tr>
           <tr height=75 style='height:56.0pt'>
             <td height=75 class=xl821 style='height:56.0pt;border-top:none'>16:45</td>
-            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper17'>ITGInsight -
+            <td class=xl711 width=405 style='border-top:none;width:304pt'><a href='papers/paper17.pdf'>ITGInsight -
               Discovering and Visualizing Science, Technology and Innovation Information
               for Generating Competitive Technological Intelligence</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xuefeng Wang, <font
