--- a/index.html
+++ b/index.html
@@ -789,8 +789,8 @@
           </tr>
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>14:00</td>
-            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper5.pdf'Extraction of 
-	      Sentences Describing Originality from Conclusion in Academic Papers</a></td>
+            <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper5.pdf'>Extraction of
+              Originative Sentence from Conclusion in Academic Papers</a></td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Bolin Hua</font><font class="font61"> and Youngkug Shin</font></td>
           </tr>
