--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
           <tr height=93 style='height:70.0pt'>
             <td height=93 class=xl821 style='height:70.0pt;border-top:none'>13:15</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><a href='papers/paper2.pdf'>Embedding-based
-              Neural Network Models for Book Recommendation in University Librarie</a></td>
+              Neural Network Models for Book Recommendation in University Librarie</a> [<a href="videos/video2.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jaeyoung Choi</font><font class="font61">, Chaeeun Han, Heeyoon
               Yang, Yeonkyoung Hong, Seoyoung Jeon and Yongjun Zhu</font></td>
@@ -773,7 +773,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:35</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper4.pdf'>Recommendation
               of Academic Collaborators: A Methodology Incorporating Word Embedding and
-              Network Embedding</a> [<a href="videos/WeiyuDuan.mp4">video</a>]</td>
+              Network Embedding</a> [<a href="videos/WeiyuDuan.mp4">video</a>] [<a href="videos/video4.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xiaowen Xi, Ying
               Guo and <font class="font81">Weiyu Duan</font></td>
           </tr>
@@ -882,7 +882,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>16:15</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper14.pdf'>Emerging
               Technology Opportunity Identification Based on Community Detection and Burst
-              Detection: A Case study of Intelligent Robots</a></td>
+              Detection: A Case study of Intelligent Robots</a> [<a href="videos/video14.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jingwen Luo</font><font class="font61">, Fang Zou, Yujie Peng
               and Ying Huang</font></td>
