--- a/index.html
+++ b/index.html
@@ -756,7 +756,7 @@
           <tr height=93 style='height:70.0pt'>
             <td height=93 class=xl821 style='height:70.0pt;border-top:none'>13:15</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><a href='papers/paper2.pdf'>Embedding-based
-              Neural Network Models for Book Recommendation in University Librarie</a> [<a href="videos/video2.mp4">video</a>]</td>
+              Neural Network Models for Book Recommendation in University Libraries</a> [<a href="videos/video2.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'><font
   class="font81">Jaeyoung Choi</font><font class="font61">, Chaeeun Han, Heeyoon
               Yang, Yeonkyoung Hong, Seoyoung Jeon and Yongjun Zhu</font></td>
