--- a/index.html
+++ b/index.html
@@ -773,7 +773,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>13:35</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper4.pdf'>Recommendation
               of Academic Collaborators: A Methodology Incorporating Word Embedding and
-              Network Embedding</a> [<a href="videos/WeiyuDuan.mp4">video</a>] [<a href="videos/video4.mp4">video</a>]</td>
+              Network Embedding</a> [<a href="videos/WeiyuDuan.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xiaowen Xi, Ying
               Guo and <font class="font81">Weiyu Duan</font></td>
           </tr>
@@ -874,7 +874,7 @@
           <tr height=37 style='height:28.0pt'>
             <td height=37 class=xl821 style='height:28.0pt;border-top:none'>16:00</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper13.pdf'>Important
-              Citations Identification with Semi-supervised Classification Model.</a> [<a href="videos/AII2021-Xin Sun.mp4">video</a>]</td>
+              Citations Identification with Semi-supervised Classification Model</a> [<a href="videos/AII2021-Xin Sun.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xin An, <font
   class="font81">Xin Sun</font><font class="font61"> and Shuo Xu</font></td>
           </tr>
