--- a/index.html
+++ b/index.html
@@ -906,7 +906,7 @@
             <td height=75 class=xl821 style='height:56.0pt;border-top:none'>16:45</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper17.pdf'>ITGInsight -
               Discovering and Visualizing Science, Technology and Innovation Information
-              for Generating Competitive Technological Intelligence</a></td>
+              for Generating Competitive Technological Intelligence</a> [<a href="videos/video17.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Xuefeng Wang, <font
   class="font81">Shuo Zhang</font><font class="font61"> and Yuqin Liu</font></td>
           </tr>
