--- a/index.html
+++ b/index.html
@@ -798,7 +798,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>14:15</td>
             <td class=xl781 width=405 style='border-top:none;width:304pt'><a href='papers/paper6.pdf'>Building the
               Extraction Model of the Software Entities from Full-Text of Research Articles
-              Based on BERT.</a></td>
+              Based on BERT</a> [<a href="videos/video6.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Chuan Jiang,
               Dongbo Wang, Si Shen, Wenhao Ye and <font class="font81">Jiangfeng Liu</font></td>
           </tr>
@@ -849,7 +849,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:25</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
   style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper11.pdf'>Measuring Interdisciplinary
-              Interactions Using Citation Analysis and Semantic Analysis</a></td>
+              Interactions Using Citation Analysis and Semantic Analysis</a> [<a href="videos/video11.mp4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Lu Huang,<font
   class="font81"> Xingxing Ni</font><font class="font61">, Xiang Chen and Yi
               Zhang</font></td>
