--- a/index.html
+++ b/index.html
@@ -849,7 +849,7 @@
             <td height=56 class=xl821 style='height:42.0pt;border-top:none'>15:25</td>
             <td class=xl791 width=405 style='border-top:none;width:304pt'><span
   style='mso-spacerun:yes'>&nbsp;</span><a href='papers/paper11.pdf'>Measuring Interdisciplinary
-              Interactions Using Citation Analysis and Semantic Analysis</a> [<a href="videos/video11.mp4">video</a>]</td>
+              Interactions Using Citation Analysis and Semantic Analysis</a> [<a href="videos/video11.MP4">video</a>]</td>
             <td class=xl761 width=301 style='border-top:none;width:138pt'>Lu Huang,<font
   class="font81"> Xingxing Ni</font><font class="font61">, Xiang Chen and Yi
               Zhang</font></td>
